fix header height bug on ios

--- a/client/styles/base_elements/header.scss
+++ b/client/styles/base_elements/header.scss
@@ -1,6 +1,8 @@
 .header--wrapper {
     width: 100%;
-    height: 260px;
+    @include for-tablet-portrait-up {
+        height: 260px;
+    }
 }
 
 .header--image {
